<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_zip1"
        android:orderInCategory="100"
        android:title="@string/zip1">
    </item>
    <item
        android:id="@+id/action_zip2"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:title="@string/zip2">
    </item>
    <item
        android:id="@+id/action_zip3"
        android:orderInCategory="300"
        android:title="@string/zip3">
    </item>
    <item
        android:id="@+id/action_zip4"
        android:orderInCategory="400"
        android:title="@string/zip4">
    </item>
    <item
        android:id="@+id/action_zip5"
        android:orderInCategory="500"
        android:title="@string/zip5">
    </item>
</menu>